電気料金修正

--- a/index.html
+++ b/index.html
@@ -53,31 +53,7 @@
                 </div>
 
                 <div class="price-section">
-                    <h3>💰 料金プラン(関東エリア)</h3>
-                    
-                    <h4 style="font-size: 1.2rem; color: #1e3c72; margin: 20px 0 10px 0;">低圧電力(動力プラン)</h4>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>項目</th>
-                                <th>単価</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>基本料金(1kWあたり)</td>
-                                <td><strong>1,037.70円</strong></td>
-                            </tr>
-                            <tr>
-                                <td>夏季(7月〜9月) 電力量料金</td>
-                                <td><strong>17.37円/kWh</strong></td>
-                            </tr>
-                            <tr>
-                                <td>その他季(10月〜6月) 電力量料金</td>
-                                <td><strong>15.80円/kWh</strong></td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <h3>💰 料金プラン(スタンダードの場合)</h3>
 
                     <h4 style="font-size: 1.2rem; color: #1e3c72; margin: 30px 0 10px 0;">従量電灯B(事務所・店舗向け)</h4>
                     <table>
@@ -103,29 +79,6 @@
                             <tr>
                                 <td>60A</td>
                                 <td>1,716.00円</td>
-                            </tr>
-                        </tbody>
-                    </table>
-
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>使用量</th>
-                                <th>電力量料金</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>最初の120kWhまで</td>
-                                <td><strong>29.80円/kWh</strong></td>
-                            </tr>
-                            <tr>
-                                <td>120kWh〜300kWh</td>
-                                <td><strong>36.40円/kWh</strong></td>
-                            </tr>
-                            <tr>
-                                <td>300kWh超過分</td>
-                                <td><strong>40.49円/kWh</strong></td>
                             </tr>
                         </tbody>
                     </table>
@@ -156,15 +109,15 @@
                         <tbody>
                             <tr>
                                 <td>最初の120kWhまで</td>
-                                <td><strong>29.80円/kWh</strong></td>
+                                <td><strong>19.88円/kWh</strong></td>
                             </tr>
                             <tr>
                                 <td>120kWh〜300kWh</td>
-                                <td><strong>36.40円/kWh</strong></td>
+                                <td><strong>26.48円/kWh</strong></td>
                             </tr>
                             <tr>
                                 <td>300kWh超過分</td>
-                                <td><strong>40.49円/kWh</strong></td>
+                                <td><strong>29.50円/kWh</strong></td>
                             </tr>
                         </tbody>
                     </table>
@@ -209,7 +162,7 @@
                     <h3>✨ その他のメリット</h3>
                     <div class="benefit-list">
                         <div class="benefit-item">業界最安水準の料金設定で大幅コスト削減</div>
-                        <div class="benefit-item">初期費用・解約金0円でリスクなし</div>
+                        <div class="benefit-item">初期費用0円</div>
                         <div class="benefit-item">Webダッシュボードで使用量をリアルタイム確認</div>
                         <div class="benefit-item">再生可能エネルギー比率50%以上でSDGs対応</div>
                         <div class="benefit-item">24時間365日の法人専用サポート窓口</div>
